v2.1.4
- Add %s.%d.Runtime property for episodes or TV shows

v2.1.3
- Add %s.Name property for the playlist name

v2.1.2
- Fix script error on tvshow playlist
- Also set MPAA and studio for episodes in some cases

v2.1.1
- Fix runtime property to use duration from streamdetails
- Fix play property for albums
- Add art(thumb) for movies (same value as art(poster) but easiest for skinner to deal with albums and movies smart playlists)

v2.1.0
- Fix issue when album have no songs
- Fix resolution when movie or TV show is not anaylized yet (not height and weight in DB)

v2.0.9
- Fix quoted or not quoted path for smart playlist
- Add Theme, Mood, Style and Type properties for Music
- Remove Thumb and Fanart properties for Music (depricated and replaced by Art(thumb) and Art(fanart) properties)

v2.0.8
- Add MPAA and Studio properties for TV Shows

v2.0.7
- Add MPAA and Director properties for movies

v2.0.6
- Add OriginalTitle property for movies

v2.0.5
- Fix statistics for Albums smart playlists

v2.0.4
- Add Country property for Movies
- Add DBID property for Movies and Episodes
- Restart or resume partially watched movies or episodes

v2.0.3
- Fix missing id error

v2.0.2
- Try to fix missing dateadded sort key
- add missing urllib imprt

v2.0.1
- Updated to Frodo compatible code

v1.2.5
- [Add] New properties TVShowThumb and TVShowFanart to get TV Show thumbnail and fanart of the episode

v1.2.4
- [Fix] Albums properties were not cleared properly
- [Add] New property AlbumDesc

v1.2.3
- [Fix] Episode title is now based on title and not on label because of some JSON changes :
http://forum.xbmc.org/showthread.php?tid=113702&pid=1047340&highlight=episodetitle#pid1049580

v1.2.2
- [Fix] Statistic for songs was wrong on library or albums playlist

v1.2.1
- [Add] The script now manage Music (playlists or library).
        See README.txt or LISEZMOI.txt for details.

v1.2.0
- [Add] Property .Type is returned. Value is Movie or Episode.