@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.randomandlastitems" name="Random and Last items script" version="2.1.3" provider-name="MikeBZH44|Martijn">
+<addon id="script.randomandlastitems" name="Random and Last items script" version="2.1.4" provider-name="MikeBZH44|Martijn|`Black">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="xbmc.json" version="6.0.0"/>
