@@ -1,5 +1,6 @@
 v2.1.4
 - Add %s.%d.Runtime property for episodes or TV shows
+- Add new method 'Playlist' which keeps the playlist order
 
 v2.1.3
 - Add %s.Name property for the playlist name
